# LightEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  OpenGL.sln  README.md  classDiagram.uxf  copy_assets.bat  sphereMaking.cpp  sphereMaking.txt
OpenGL/: .cpp  Camera.cpp  Camera.h  EBOHandler.cpp  EBOHandler.h  Engine.cpp  Engine.h  FileData.cpp  FileData.h  GLShader.cpp  GLShader.h  GameRenderer.cpp  GameRenderer.h  Object.cpp  ObjectHandler.cpp  ObjectHandler.h  ObjectHandlerElement.cpp  ObjectHandlerElement.h  ObjectHandlerVertex.cpp  ObjectHandlerVertex.h  ObjectUniforms.h  OpenGL.vcxproj  OpenGL.vcxproj.filters  ProgramRenderer.cpp  ProgramRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformHandling.h  VBOHandler.cpp  VBOHandler.h  Window.cpp  Window.h  base.cpp  base.h  baseFunctions.cpp  baseFunctions.h  camera.cpp  camera.h  (+29 more)
OpenGL/PicoRender/: Camera.h  FileData.cpp  FileData.h  GameRenderer.cpp  GameRenderer.h  Object.cpp  ObjectHandler.cpp  ObjectHandler.h  ProgramRenderer.cpp  ProgramRenderer.h  Shader.cpp  Shader.h
OpenGL/Shaders/: fragment.txt  vertex.txt
OpenGL/data/: palettes  sphereBuffer  sphereElements
OpenGL/include/: Camera.cpp  GameRenderer.cpp  ObjectHandler.cpp  ObjectHandler.h
OpenGL/shaders/: colorVertex.txt  fragment.glsl  fragmentLight.glsl  fragmentLight.txt  vertex.glsl
OpenGL/sphereGen/: generator.h
PicoEngine/: CMakeLists.txt  FileData.h  FileReader.cpp  FileReader.h  GLProgram.h  GraphicalObject.cpp  Object.h  PhysicalWorld.cpp  PicoEngine.cpp  PicoEngine.h  Shader.h  Window.cpp  Window.h  main.cpp
PicoEngine/lib/bullet-2.89/BulletCollision/: CMakeLists.txt
PicoEngine/lib/bullet-2.89/BulletDynamics/: CMakeLists.txt
PicoFramework/: CMakeLists.txt  gl.h
PicoFramework/Graphics/: GLProgram.cpp
PicoFramework/ObjectManager/Object/: Object.h
PicoFramework/World/: Camera.cpp  Camera.h
PicoFramework/bullet-2.89/: CMakeLists.txt
PicoFramework/bullet-2.89/LinearMath/: CMakeLists.txt
PicoFramework/dependencies/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/BulletCollision/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/BulletDynamics/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/BulletInverseDynamics/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/BulletSoftBody/: CMakeLists.txt
PicoFramework/dependencies/bullet-2.89/LinearMath/: CMakeLists.txt
PicoFramework/pf/Graphics/: GLProgram.cpp
PicoFramework/pf/ObjectManager/: PhantomManagerE.cpp
PicoFramework/pf/ObjectManager/Object/: Object.cpp
PicoFramework/src/: CMakeLists.txt
PicoFramework/src/File/: FileReaderHandler.cpp  FileReaderHandler.h
PicoFramework/src/ObjectManager/: BoxManager.cpp  ObjectManager.cpp  PhantomManagerE.h  SphereManager.h
PicoFramework/src/ObjectManager/Object/: Object.h  ObjectRenderer.h
PicoFramework/src/World/: DirLight.cpp  DirLight.h
data/binary/: sphereBuffer  sphereElements
data/shaders/: fragment.glsl  fragment_fbo.glsl  fragment_fbo_pixel.glsl  fragment_line.glsl  fragment_shadow.glsl  vertex.glsl  vertex_fbo.glsl  vertex_shadow.glsl
data/shaders/fragment/: fragment_base.glsl
data/shaders/vertex/: vertex.glsl  vertex_base.glsl  vertex_line.glsl
data/sphere_gen/: generator.h
enc_temp_folder/ac88125996e2b2e259599044522b6b26/: FileReader.cpp
include/: Camera.h  FileData.h  GameRenderer.h  Object.h  PhysicalObject.h  PhysicalWorld.h  ProgramRenderer.h
lib/bullet-2.89/BulletCollision/: CMakeLists.txt
lib/bullet-2.89/BulletDynamics/: CMakeLists.txt
lib/bullet-2.89/LinearMath/: CMakeLists.txt
src/: BoxManager.cpp  BoxManager.h  CMakeLists.txt  Camera.cpp  Camera.h  DirLight.cpp  FileData.cpp  FileData.h  FileReaderAbs.cpp  FileReaderAbs.h  FileReaderHandler.cpp  FileReaderHandler.h  GLProgram.cpp  GLProgram.h  GameManager.cpp  GameManager.h  GameRenderer.cpp  GameRenderer.h  GraphicalObject.cpp  GraphicalObject.h  IFileReader.cpp  IFileReader.h  Object.cpp  Object.h  ObjectHandler.cpp  ObjectHandler.h  ObjectManager.cpp  ObjectManager.h  ObjectManagerAbs.cpp  ObjectManagerAbs.h  PhantomManagerE.cpp  PhantomManagerE.h  PhantomManagerV.cpp  PhantomManagerV.h  PhysicalManager.cpp  PhysicalManager.h  PhysicalObject.cpp  PhysicalObject.h  PhysicalWorld.cpp  PhysicalWorld.h  (+7 more)
src/Graphics/: GLProgram.h  Shader.h
src/ObjectManager/: GraphicalManager.cpp  GraphicalManager.h  ObjectManager.h  PhantomManagerV.cpp  SphereManager.cpp
src/ObjectManager/Object/: GraphicalObject.h  Object.cpp  ObjectRenderer.cpp  ObjectRenderer.h
src/World/: Camera.cpp  Camera.h  DirLight.h  PhysicalWorld.h
src/ballGame/: BallGameManager.cpp  BallGameManager.h  TunnelManager.cpp  TunnelManager.h
test/: Test.cpp
